--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Navbar by @NdanBytesDev</title>
     <!-- link style css -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- font google -->
     <link href="https://fonts.googleapis.com/css2?family=Goldman&display=swap" rel="stylesheet">
@@ -63,7 +63,7 @@
     </main>
     
     <!-- script js -->
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 
 </body>
 </html>
